change app title in swedish

--- a/GVC-Apple-Multiplatform/Localization/sv.lproj/Localizable.strings
+++ b/GVC-Apple-Multiplatform/Localization/sv.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "Gas volume" = "Gasvolym";
 
 /* The title of the app */
-"Gas Volume Calculator" = "Gasvolym Beräkning";
+"Gas Volume Calculator" = "Gasvolym Beräknare";
 
 /* A length value in meters */
 "Length (m)" = "Längd (m)";
